# tc25-2-demo

./: README.md  buildEngineImage.sh  buildFrontendImage.sh  buildImages.sh  docker-compose.yml
docs/vibe-code/: base-app-chat.html
engine/: Dockerfile  main.py  models.py  pyproject.toml
engine/geojson/: a.geojson  b.geojson  c.geojson
engine/geojson/lookup_mocks/: exampleColouredPolygons.geojson  exampleFill.geojson
engine/routers/: __init__.py  envdata_router.py  geojson_router.py
engine/shape_optimisations/: georouter.py  shape_optimisations.py
environmentalData/: salinityDataPrep.ipynb
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  CesiumMap.jsx  CesiumViewer.jsx  CesiumViewerWithPolygon.jsx  CesiumWithSidebar.jsx  DrawEnvData.jsx  DrawPolygon.jsx  PolygonDrawer.jsx  main.jsx
