[tool.poetry]
name = "engine"
version = "0.1.0"
description = ""
authors = ["JE <jackent601@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.115.12"}
uvicorn = "^0.34.3"
geopandas = "^1.1.0"
shapely = "^2.1.1"
python-multipart = "^0.0.20"
matplotlib = "^3.10.3"
pulp = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
